solc_ossfuzz_seed_corpus/test_solidity/test_160948bacc781df6c094c09d3d1a0e53f41fc884914e002303911d10d8e324ab_0b52e1b988740063d77f98b68f09c0086683a56f_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
function f0(uint200 i0)      returns(uint72 o0,bool o1){
  return (0x0000000000000000000000000000000000000005 f1 /*suffix expr*/, ((false == true) ? true : true));
}
function f2()     {
}
pragma solidity >= 0.0.0;
struct St0 {
  uint24 el0;
}
function f1(address i0) pure suffix  returns(uint72 o0)
{
  function (function (bytes19, uint240, uint80) external   returns (bytes31, int40), address payable, int88) external   returns (function (uint80) external   returns (bool)) l0 = 0 f3 /*suffix expr*/;
}
function f3(uint24 i0) pure suffix  returns(function (function (bytes19, uint240, uint80) external   returns (bytes31, int40), address payable, int88) external   returns (function (uint80) external   returns (bool)) o0)
{
  try o0(hex"0000000000000000000000000000000000" f4 /*suffix expr*/,payable(address(0x0000000000000000000000000000000000000007)),int88(0)) returns (function (uint80) external   returns (bool) l0)
  {
    assert(true);
    delete o0;
  }
  catch
  {
    if (i0 != ((uint24(2629924) | ((uint24(16777215) + uint24(16777215)) ^ uint24(0))) ^ uint24(0)))
    {
      while ((payable(address(0x0000000000000000000000000000000000000008)) >= payable(address(0x0000000000000000000000000000000000000005))))
      {
        if (i0 != (~((uint24(16777215) + uint24((false ? uint184(4328580403873106366342946141471866288114395640039532726) : uint184(21372514207120893510784648416379646143066906236686320124)))))))
        {
          return (o0);
        }
      }
      while ((bytes25(0x00000000000000000000000000000000000000000000000000) < bytes25(0xffffffffffffffffffffffffffffffffffffffffffffffffff)))
      {
      }
    }
    else
    {
      while ((address(0x0000000000000000000000000000000000000004) == address(bytes20(address(0x0000000000000000000000000000000000000000)))))
      {
        if (i0 < uint24(14227312))
        {
          if (i0 <= (uint24(16777215) % ((((uint24(0) % uint24(16777215)) * uint24(0)) + uint24(4926599)) >> uint64(uint64(18446744073709551615)))))
          {
            while (false)
            {
              if (i0 != uint24(0))
              {
                (o0) = (hex"8ae49414a936b93ff1bd1d4c473a6eb9db1d44051be8e98c7cced62f" f6 /*suffix expr*/);
                assert(o0 == hex"8ae49414a936b93ff1bd1d4c473a6eb9db1d44051be8e98c7cced62f" f6 /*suffix expr*/);
              }
              else if (i0 > ((true ? uint24(8659267) : (uint24(0) | uint24(0))) * uint24(16777215)))
              {
                break;
              }
              return (o0);
            }
          }
          else if (i0 < (((uint24(16777215) >> uint48((uint48(uint136(0)) >> uint232(uint232(0))))) % uint24(3080641)) + uint24(0)))
          {
            if (i0 > (((uint24(16777215) | uint24(0)) % uint24(16777215)) % uint24(0)))
            {
              break;
            }
          }
        }
      }
    }
  }
}
function f4(bytes17 i0) pure suffix  returns(function (bytes19, uint240, uint80) external   returns (bytes31, int40) o0)
{
}
function f5(address i0) pure suffix  returns(int88 o0)
{
}
function f6(bytes28 i0) pure suffix  returns(function (function (bytes19, uint240, uint80) external   returns (bytes31, int40), address payable, int88) external   returns (function (uint80) external   returns (bool)) o0)
{
}
// ----
// Warning 5667: (su1.sol:12-22): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:255-265): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:288-297): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su1.sol:303-477): Unused local variable.
// Warning 5667: (su1.sol:874-920): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 2018: (su1.sol:0-165): Function state mutability can be restricted to pure
// TypeError 8961: (su1.sol:732-864): Function cannot be declared as pure because this expression (potentially) modifies the state.
